--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 * {
     font-family: Helvetica, Arial, sans-serif;
-    background-color: rgb(234, 234, 234);
+    background-color: #0d1117;
   }
   
   body {
@@ -8,23 +8,29 @@
   }
   
   input {
-    background-color: white;
+    background-color: #010409;
     border-radius: 5px;
     border: 1px solid rgb(97, 32, 158);
-    color: black;
+    color: #e6edf3;
     font-size: 1.2rem;
     outline: none;
     padding: 10px 15px;
     width: 100%;
   }
+
+  h1 {
+    color: #e6edf3;
+  }
   
   h2 {
     font-size: 1.5rem;
+    
   }
   
   h3 {
     font-size: 3rem;
     margin-bottom: 5px;
+    color: #e6edf3;
   }
   
   .card-grid {
@@ -37,7 +43,7 @@
   .card {
     align-content: center;
     align-items: center;
-    background-color: white;
+    background-color: #202731;
     border-radius: 10px;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
     display: flex;
@@ -50,7 +56,8 @@
   }
   
   .card p {
-    background-color: white;
+    background-color: #202731;
+    color: #e6edf3;
     flex: 1;
     font-size: 1.5rem;
     margin-top: 5px;
@@ -61,5 +68,21 @@
   .card img {
     width: 100%;
   }
+
+  button {
+    background-color: #3fb950;
+    border: 0;
+    border-radius: 10px;
+    font-size: 16px;
+    max-width: 480px;
+    min-height: 40px;
+    min-width: 0px;
+  }
+
+  button:hover{
+    background-color: #22722d;
+  }
   
-  .gif-grid-title {}
+  a {
+    color: #2f81f7;
+  }
